[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[mypy]
# mypy is upset that readlines and writelines are
# methods as compared to stand alone functions,
# as this overrides the first argument with self
disable_error_code = override
ignore_missing_imports = True

[tool:pytest]
markers =
    unit: mark test as a unit test (does not require network access)
    functional: mark test as a functional test (does not require network access)
    hypothesis: mark a test as using hypothesis (will run many times for each pytest call)
log_level=NOTSET

# Flake8 Configuration
[flake8]
max_complexity = 10
max_line_length = 120
import_order_style = google
application_import_names = base64io
builtins = raw_input
ignore =
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503,
    # Ignoring D202 (no blank lines after function docstring) because mypy confuses flake8
    D202


# Doc8 Configuration
[doc8]
max-line-length = 120

[isort]
line_length = 120
# https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
known_first_party = base64io
known_third_party =base64io,mock,pytest,setuptools
